# cppshell

./: CMakeLists.txt  deps.hpp  main.cpp
core/: core.cpp  core.hpp
core/security/: chiper.cpp  chiper.hpp  permissions.cpp  permissions.hpp
core/security/chipermethods/: magiccube.cpp  magiccube.hpp  sha256.cpp  sha256.hpp
core/shell/: cmdgen.cpp  cmdgen.hpp  shell.cpp  shell.hpp  shellcmd.cpp  shellcmd.hpp
core/user/: user.cpp  user.hpp  userstorage.cpp  userstorage.hpp
